--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,9 @@
 services:
   - type: web
     name: mvl-benchmark-generator
-    runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python web/app.py
+    runtime: docker
+    dockerfilePath: ./Dockerfile
     envVars:
-      - key: PYTHON_VERSION
-        value: "3.11"
       - key: PORT
         value: "5001"
       - key: GEMINI_API_KEY
@@ -23,3 +20,4 @@ services:
         sync: false
       - key: TOGETHER_API_KEY
         sync: false
+    healthCheckPath: /api/status
